[gd_scene load_steps=2 format=3 uid="uid://c2gk40qhyoiwu"]

[ext_resource type="Script" path="res://ui.gd" id="1_rfuae"]

[node name="UI" type="Panel"]
offset_right = 1134.0
offset_bottom = 634.0
size_flags_horizontal = 4
size_flags_vertical = 6
script = ExtResource("1_rfuae")

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 325.0
offset_top = 21.0
offset_right = 1120.0
offset_bottom = 617.0
placeholder_text = "














"
editable = false
virtual_keyboard_enabled = false
wrap_mode = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 18.0
offset_right = 310.0
offset_bottom = 614.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Nakama Authentication Demo





"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Email"

[node name="Email" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Password"

[node name="Password" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
secret = true

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="CreateAccount" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "create"

[node name="Login" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "login"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="button_down" from="VBoxContainer/CreateAccount" to="." method="_on_create_account_button_down"]
[connection signal="button_down" from="VBoxContainer/Login" to="." method="_on_login_button_down"]
